Agregue logo a todas las paginas tamaño celular ok

--- a/femenino.html
+++ b/femenino.html
@@ -12,22 +12,26 @@
 </head>
 
 <body class="contenedor-femenino">
+    <header class="header">  
 
-    
-
-    <div class="header-femenino">
-        <header>
-                <nav class="navegacion-femenino">
-                    <ul class="menu">
-                        <li><a href="index.html">INICIO</a></li>
-                        <li><a href="FEMENINO.html">FEMENINO</a></li>
-                        <li><a href="MASCULINO.html">MASCULINO</a></li></li>
-                        <li><a href="INFORMACION.html">INFORMACION</a></li></li>
-                        <li><a href="CONTACTO.HTML">CONTACTO</a></li></li>
+        <div class="contenedor-logo">
+            <div class="logo">
+                <a href="index.html">
+                    <h1>RIOFTBL</h1>
+                </a>
+            </div>    
+                    
+            <nav class="navegacion">
+                <ul class="menu">
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="FEMENINO.html">FEMENINO</a></li>
+                    <li><a href="MASCULINO.html">MASCULINO</a></li></li>
+                    <li><a href="INFORMACION.html">INFORMACION</a></li></li>
+                    <li><a href="CONTACTO.HTML">CONTACTO</a></li></li>
                     </ul>
-                </nav>
-        </header>
-    </div>   
+            </nav>
+        </div>
+    </header> 
 
     <main class="main-femenino">
 
