--- a/contacto.html
+++ b/contacto.html
@@ -24,10 +24,10 @@
             <nav class="navegacion">
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="FEMENINO.html">FEMENINO</a></li>
-                    <li><a href="MASCULINO.html">MASCULINO</a></li></li>
-                    <li><a href="INFORMACION.html">INFORMACION</a></li></li>
-                    <li><a href="CONTACTO.HTML">CONTACTO</a></li></li>
+                    <li><a href="femenino.html">FEMENINO</a></li>
+                    <li><a href="masculino.html">MASCULINO</a></li></li>
+                    <li><a href="informacion.html">INFORMACION</a></li></li>
+                    <li><a href="contacto.html">CONTACTO</a></li></li>
                     </ul>
             </nav>
         </div>
