animaciones y transformaciones agregadas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="contenedor-logo">
             <div class="logo">
                 <a href="index.html">
-                    <h1>RIOFTBL</h1>
+                    <h1>FTBL</h1>
                 </a>
             </div>    
                     
@@ -42,7 +42,7 @@
                 </div>    
 
                 <div class="banner">
-                    <a href="INFORMACION.html"><h2 class="h2-informacion">INFORMACION</h2>
+                    <a href="informacion.html"><h2 class="h2-informacion">INFORMACION</h2>
                     <img class="imagen-banner" src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
                     </a>
                 </div>
