--- a/masculino.html
+++ b/masculino.html
@@ -52,7 +52,7 @@
              </p>
 
             <div>
-                <img src="https://images.unsplash.com/photo-1626248801379-51a0748a5f96?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="varones" width="100%">
+                <img class="portada-masculino" src="https://images.unsplash.com/photo-1626248801379-51a0748a5f96?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="varones" width="100%">
             </div>
             <h1>Tabla de posiciones</h1>
         <table class="posiciones-masculino">
