Faltaba RIO en logo index

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="contenedor-logo">
             <div class="logo">
                 <a href="index.html">
-                    <h1>FTBL</h1>
+                    <h1>RIOFTBL</h1>
                 </a>
             </div>    
                     
