--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <title>Document</title>
 </head>
 
-<body class="contenedor">
-    <header class="header">
+<body class="container-fluid">
+    <header class="row header">
 
         <div class="contenedor-logo">
-            <div class="logo">
+            <div class="col-lg-2 col-md-4 col-sm-12 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
