--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <body class="container-fluid">
     <header class="row header">
 
-        <div class="contenedor-logo">
-            <div class="col-lg-2 col-md-4 col-sm-12 logo">
+        <div class="col-lg-12 col-md-4 col-sm-12 contenedor-logo">
+            <div class="logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
             </div>
 
 
-            <nav class="navegacion">
+            <nav class="col-lg-12 col-md-4 col-sm-12 navegacion">
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
