--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="container-fluid">
     <header class="row header">
 
-        <div class="col-lg-12 col-md-4 col-sm-12 contenedor-logo">
+        <div class="col-4-lg col-4-md col-12-sm contenedor-logo">
             <div class="logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
@@ -26,7 +26,7 @@
             </div>
 
 
-            <nav class="col-lg-12 col-md-4 col-sm-12 navegacion">
+            <nav class="col-8-lg col-8-lg col-sm-12 navegacion">
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
@@ -42,14 +42,14 @@
         </div>
     </header>
 
-    <main class="main">
+    <main class="row main">
 
-        <div class="portada">
+        <div class="row portada">
             <img class="imagen-portada"
                 src="https://images.unsplash.com/photo-1529900748604-07564a03e7a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
-        <div class="banner">
+        <div class="row banner">
             <a href="informacion.html">
                 <h2 class="h2-informacion">INFORMACION</h2>
                 <img class="imagen-banner"
@@ -57,25 +57,25 @@
             </a>
         </div>
 
-        <section class="masculino-femenino">
-            <div class="femenino">
+        
+            <div class="row femenino">
                 <a href="femenino.html">
                     <h2 class="h2-femenino">FEMENINO</h2>
                     <img class="imagen-femenino"
                         src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                 </a>
             </div>
-            <div class="masculino">
+            <div class="row masculino">
                 <a href="masculino.html">
                     <h2 class="h2-masculino">MASCULINO</h2>
                     <img class="imagen-masculino"
                         src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
                 </a>
             </div>
-        </section>
+       
     </main>
 
-    <footer class="footer">
+    <footer class="row footer">
         <a href="https://es-la.facebook.com/"><img class="redes"
                 src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png"><a>
                 <a href="https://www.instagram.com/?hl=es-la"><img class="redes"
