--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <title>Document</title>
 </head>
 
-<body class="container-fluid">
+<body class="container">
     <header class="row header">
 
-        <div class="col-4-lg col-4-md col-12-sm contenedor-logo">
-            <div class="logo">
+        <div class="contenedor-logo">
+            <div class="col-4-lg col-4-md col-12-sm logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
@@ -31,11 +31,8 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
                     <li><a href="masculino.html">MASCULINO</a></li>
-                    </li>
                     <li><a href="informacion.html">INFORMACION</a></li>
-                    </li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    </li>
                 </ul>
             </nav>
 
