--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
 
         <div class="contenedor-logo">
-            <div class="logo">
+            <div clagit hss="logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
