--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="container-fluid">
     <header class="row header">
 
-        
+        <section class="row contenedor-header">
             <div class="col-sm-12 col-md-4 col-lg-4 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
@@ -25,7 +25,7 @@
             </div>
 
 
-            <nav class="col-sm-12 col-md-8 col-lg-8 navegacion">
+            <nav class="col-sm-12 col-md-4 col-lg-4 navegacion">
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
@@ -37,7 +37,7 @@
                     </li>
                 </ul>
             </nav>
-
+        </section>
         </div>
     </header>
 
