--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <a class="nav-link" href="index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="femenino.html">FEMENINO/a>
+                                <a class="nav-link" href="femenino.html">FEMENINO</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="masculino.html">MASCULINO</a>
