menu al estado anterior y original

--- a/index.html
+++ b/index.html
@@ -26,7 +26,17 @@
 
 
             <nav class="col-sm-12 col-md-8 col-lg-8 navegacion">
-                
+                <ul class="menu">
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="femenino.html">FEMENINO</a></li>
+                    <li><a href="masculino.html">MASCULINO</a></li>
+                    </li>
+                    <li><a href="informacion.html">INFORMACION</a></li>
+                    </li>
+                    <li><a href="contacto.html">CONTACTO</a></li>
+                    </li>
+                </ul>
+
             </nav>
         </section>
         </div>
