--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <header class="row header">
 
         <section class="row contenedor-header">
-            <div class="col-sm-12 col-md-4 col-lg-4 logo">
+            <div class="col-lg-4 col-md-4 col-sm-12 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
             </div>
 
 
-            <nav class="col-sm-12 col-md-8 col-lg-8 navegacion">
+            <nav class="col-lg-8 col-md-8 col-sm-12 navegacion">
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
