--- a/index.html
+++ b/index.html
@@ -27,13 +27,34 @@
 
 
             <nav class="col-lg-8 col-md-8 col-sm-12 navegacion">
-                <ul class="menu">
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="femenino.html">FEMENINO</a></li>
-                    <li><a href="masculino.html">MASCULINO</a></li>
-                    <li><a href="informacion.html">INFORMACION</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="index.html">INICIO<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="femenino.html">FEMENINO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="masculino.html">MASCULINO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="informacion.html">INFORMACION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">CONTACTO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
 
             </nav>
         </section>
