--- a/femenino.html
+++ b/femenino.html
@@ -17,27 +17,45 @@
     <header class="row header">
 
         <section class="row contenedor-header">
-            <div class="col-lg-4 col-md-4 col-sm-12 logo">
+            <div class="col-lg-2 col-md-2 col-sm-12 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
             </div>
 
 
-            <nav class="col-lg-8 col-md-8 col-sm-12 navegacion">
-                <ul class="menu">
-                    <li><a href="index.html">INICIO</a></li>
-                    <li><a href="femenino.html">FEMENINO</a></li>
-                    <li><a href="masculino.html">MASCULINO</a></li>
-                    <li><a href="informacion.html">INFORMACION</a></li>
-                    <li><a href="contacto.html">CONTACTO</a></li>
-                </ul>
+            <nav class="col-lg-10 col-md-10 col-sm-12 navegacion">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="index.html">INICIO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="femenino.html">FEMENINO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="masculino.html">MASCULINO</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="informacion.html">INFORMACION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html">CONTACTO</a>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </nav>
 
             </nav>
         </section>
         </div>
     </header>
-
 
     <main class="row main-femenino">
 
