--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <header class="row header">
 
         <section class="row contenedor-header">
-            <div class="col-lg-4 col-md-4 col-sm-12 logo">
+            <div class="col-lg-2 col-md-2 col-sm-12 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
             </div>
 
 
-            <nav class="col-lg-8 col-md-8 col-sm-12 navegacion">
+            <nav class="col-lg-10 col-md-10 col-sm-12 navegacion">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                       <ul class="navbar-nav">
                         <li class="nav-item active">
-                          <a class="nav-link" href="index.html">INICIO<span class="sr-only">(current)</span></a>
+                          <a class="nav-link" href="index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="femenino.html">FEMENINO</a>
@@ -49,9 +49,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contacto.html">CONTACTO</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                        </li>
+                        
                       </ul>
                     </div>
                   </nav>
