--- a/femenino.html
+++ b/femenino.html
@@ -17,40 +17,42 @@
     <header class="row header">
 
         <section class="row contenedor-header">
-            <div class="col-lg-2 col-md-2 col-sm-12 logo">
+            <div class="col-lg-2 col-md-6 col-sm-12 logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
             </div>
 
 
-            <nav class="col-lg-10 col-md-10 col-sm-12 navegacion">
+            <nav class="col-lg-10 col-md-6 col-sm-12 navegacion">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="index.html">INICIO</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="femenino.html">FEMENINO</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="masculino.html">MASCULINO</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="informacion.html">INFORMACION</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="contacto.html">CONTACTO</a>
-                        </li>
-                        
-                      </ul>
+                    <div class="container-fluid">
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">INICIO</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="femenino.html">FEMENINO</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="masculino.html">MASCULINO</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="informacion.html">INFORMACION</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contacto.html">CONTACTO</a>
+                                </li>
+
+                            </ul>
+                        </div>
                     </div>
-                  </nav>
+                </nav>
 
             </nav>
         </section>
