--- a/femenino.html
+++ b/femenino.html
@@ -32,7 +32,7 @@
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
+                            <ul class="navbar-nav mr-auto col-12" >
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">INICIO</a>
                                 </li>
