--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://www.pexels.com/es-es/foto/balon-de-futbol-adidas-blanco-sobre-el-cesped-274506/" alt="First slide">
+                    <img class=" w-100" src="https://www.pexels.com/es-es/foto/balon-de-futbol-adidas-blanco-sobre-el-cesped-274506/" alt="First slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.pexels.com/es-es/foto/hombre-vestido-con-camisa-azul-en-bola-3684122/" alt="Second slide">
+                    <img class=" w-100" src="https://www.pexels.com/es-es/foto/hombre-vestido-con-camisa-azul-en-bola-3684122/" alt="Second slide">
                   </div>
                   <div class="carousel-item">
-                    <img class="d-block w-100" src="https://www.pexels.com/es-es/foto/tres-mujeres-jugando-al-futbol-685382/" alt="Third slide">
+                    <img class=" w-100" src="https://www.pexels.com/es-es/foto/tres-mujeres-jugando-al-futbol-685382/" alt="Third slide">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
