Agregando en todas las paginas css

--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     <main class="row main">
 
         <div class="col-sm-12 col-md-12 col-lg-12 portada">
-            <img class="imagen-portada"
+            <img class="imagen-portada img-fluid"
                 src="https://images.unsplash.com/photo-1529900748604-07564a03e7a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
         <div class="col-sm-12 col-md-12 col-lg-12 banner">
             <a href="informacion.html">
                 <h2 class="h2-informacion">INFORMACION</h2>
-                <img class="imagen-banner"
+                <img class="imagen-banner img-fluid"
                     src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
             </a>
         </div>
@@ -83,7 +83,7 @@
         <div class="col-sm-12 col-md-12 col-lg-12 femenino">
             <a href="femenino.html">
                 <h2 class="h2-femenino">FEMENINO</h2>
-                <img class="imagen-femenino"
+                <img class="imagen-femenino img-fluid"
                     src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
             </a>
         </div>
@@ -91,7 +91,7 @@
         <div class="col-sm-12 col-md-12 col-lg-12 masculino">
             <a href="masculino.html">
                 <h2 class="h2-masculino">MASCULINO</h2>
-                <img class="imagen-masculino"
+                <img class="imagen-masculino img-fluid"
                     src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
             </a>
         </div>
