--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
 
 
             <nav class="col-lg-10 col-md-6 col-sm-12 navegacion">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light nav-contenedor">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
             </nav>
         </section>
         </div>
-    </header> 
+    </header>
     
 
     <main class="main">
