--- a/masculino.html
+++ b/masculino.html
@@ -24,7 +24,7 @@
 
 
             <nav class="col-lg-10 col-md-6 col-sm-12 navegacion">
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,6 +57,7 @@
         </section>
         </div>
     </header>
+    
     <main>
         <H1>Torneo Masculino</H1>
              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
