--- a/index.html
+++ b/index.html
@@ -31,33 +31,30 @@
 
             <nav class="col-lg-10 col-md-6 col-sm-12 navegacion">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">INICIO</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="femenino.html">FEMENINO</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="masculino.html">MASCULINO</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="informacion.html">INFORMACION</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contacto.html">CONTACTO</a>
-                                </li>
-
-                            </ul>
-                        </div>
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="index.html">INICIO </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="femenino.html">FEMENINO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="masculino.html">MASCULINO</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="informacion.html">INFORMACION</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="contacto.html">CONTACTO</a>
+                          </li>
+                      </ul>
                     </div>
-                </nav>
+                  </nav>
 
             </nav>
         </section>
