--- a/masculino.html
+++ b/masculino.html
@@ -53,7 +53,7 @@
                 alt="varones" width="100%">
         </div>
         <h1>Tabla de posiciones</h1>
-        <table class="posiciones-masculino">
+        <table class="contenedor-posiciones-masculino">
             <tr>
                 <td>EQUIPO</td>
                 <td>PTS</td>
