Terminando masculino completo

--- a/femenino.html
+++ b/femenino.html
@@ -23,7 +23,7 @@
             </div>    
                     
             
-                <nav class="navegacion">
+                <nav class="navegacion-femenino">
                     <ul class="menu">
                         <li><a href="index.html">INICIO</a></li>
                         <li><a href="femenino.html">FEMENINO</a></li>
