--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
 
         <div class="contenedor-logo">
-            <div clagit hss="logo">
+            <div class="logo">
                 <a href="index.html">
                     <h1>RIOFTBL</h1>
                 </a>
@@ -66,7 +66,7 @@
                     src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
             </a>
         </div>
-        </section>
+       
     </main>
 
     <footer class="footer">
