--- a/femenino.html
+++ b/femenino.html
@@ -53,7 +53,7 @@
         </div>
 
         <div>
-            <img class="imagen-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+            <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
         
         
