--- a/masculino.html
+++ b/masculino.html
@@ -54,7 +54,7 @@
         </div>
 
         <div>
-            <img class="imagen-masculino img-fluid"
+            <img class="portada-masculino img-fluid"
                 src="https://images.unsplash.com/photo-1626248801379-51a0748a5f96?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                 alt="varones" width="100%">
         </div>
