--- a/index.html
+++ b/index.html
@@ -31,14 +31,10 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
                     <li><a href="masculino.html">MASCULINO</a></li>
-                    </li>
                     <li><a href="informacion.html">INFORMACION</a></li>
-                    </li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    </li>
                 </ul>
             </nav>
-
         </div>
     </header>
 
@@ -52,33 +48,32 @@
         <div class="banner">
             <a href="informacion.html">
                 <h2 class="h2-informacion">INFORMACION</h2>
-                <img class="imagen-banner img-fluid"
-                    src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
+                <img class="imagen-banner img-fluid" src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
             </a>
         </div>
 
         <div class="femenino">
             <a href="femenino.html">
                 <h2 class="h2-femenino">FEMENINO</h2>
-                <img class="imagen-femenino img-fluid"
-                    src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <img class="imagen-femenino img-fluid" src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
             </a>
         </div>
         <div class="masculino">
             <a href="masculino.html">
-                <h2 class="h2-masculino img-fluid">MASCULINO</h2>
-                <img class="imagen-masculino"
-                    src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <h2 class="h2-masculino">MASCULINO</h2>
+                <img class="imagen-masculino img-fluid" src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
             </a>
         </div>
 
     </main>
 
     <footer class="footer">
-        <a href="https://es-la.facebook.com/"><img class="redes"
-                src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png"><a>
-                <a href="https://www.instagram.com/?hl=es-la"><img class="redes"
-                        src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg"></a>
+        <a href="https://es-la.facebook.com/">
+            <img class="redes" src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png">
+        <a>
+        <a href="https://www.instagram.com/?hl=es-la">
+            <img class="redes" src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg">
+        </a>
                 <P>Todos los derechos reservados.</P>
     </footer>
 
