--- a/femenino.html
+++ b/femenino.html
@@ -31,11 +31,8 @@
                     <li><a href="index.html">INICIO</a></li>
                     <li><a href="femenino.html">FEMENINO</a></li>
                     <li><a href="masculino.html">MASCULINO</a></li>
-                    </li>
                     <li><a href="informacion.html">INFORMACION</a></li>
-                    </li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    </li>
                 </ul>
             </nav>
 
@@ -59,8 +56,7 @@
         </div>
 
         <div>
-            <img class="portada-femenino img-fluid"
-                src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+            <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
 
