--- a/masculino.html
+++ b/masculino.html
@@ -52,65 +52,68 @@
                 src="https://images.unsplash.com/photo-1626248801379-51a0748a5f96?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"
                 alt="varones" width="100%">
         </div>
-        <h1>Tabla de posiciones</h1>
-        <table class="contenedor-posiciones-masculino">
-            <tr>
-                <td>NOMBRE</td>
-                <td>PTS</td>
-                <td>PJ</td>
-                <td>PG</td>
-                <td>PE</td>
-                <td>PP</td>
-                <td>DG</td>
-            </tr>
-            <tr>
-                <td>EQUIPO 1</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>EQUIPO 2</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>EQUIPO 3</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>EQUIPO 4</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-            <tr>
-                <td>EQUIPO 5</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
 
-        </table>
+        <div class="contenedor-posiciones-masculino">
+            <h2>Tabla de posiciones</h2>
+            <table class="contenedor-posiciones-masculino">
+                <tr>
+                    <td>NOMBRE</td>
+                    <td>PTS</td>
+                    <td>PJ</td>
+                    <td>PG</td>
+                    <td>PE</td>
+                    <td>PP</td>
+                    <td>DG</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 1</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 2</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 3</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 4</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 5</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+            </table>
+        </div>
     </main>
+
     <footer class="footer-masculino">
         <P>Todos los derechos reservados.</P>
     </footer>
