--- a/masculino.html
+++ b/masculino.html
@@ -115,7 +115,11 @@
     </main>
 
     <footer class="footer-masculino">
-        <P>Todos los derechos reservados.</P>
+        <a href="https://es-la.facebook.com/"><img class="redes"
+                src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png"><a>
+                <a href="https://www.instagram.com/?hl=es-la"><img class="redes"
+                        src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg"></a>
+                <P>Todos los derechos reservados.</P>
     </footer>
 </body>
 
