centrando tabla de posicione femenino

--- a/femenino.html
+++ b/femenino.html
@@ -59,7 +59,7 @@
 
         <div class="contenedor-posiciones-femenino">
             <h2>Tabla de posiciones</h2>
-            <table class="posiciones-femenino">
+            <table>
                 <tr>
                     <td>NOMBRE</td>
                     <td>PTS</td>
