--- a/masculino.html
+++ b/masculino.html
@@ -55,7 +55,7 @@
 
         <div class="contenedor-posiciones-masculino">
             <h2>Tabla de posiciones</h2>
-            <table class="posiciones-masculino">
+            <table>
                 <tr>
                     <td>NOMBRE</td>
                     <td>PTS</td>
