agregue tabla nueva a femenino

--- a/femenino.html
+++ b/femenino.html
@@ -55,9 +55,67 @@
             <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
         </div>
 
+        <div class="contenedor-posiciones-masculino">
+            <h2>Tabla de posiciones</h2>
+            <table class="posiciones-masculino">
+                <tr>
+                    <td>NOMBRE</td>
+                    <td>PTS</td>
+                    <td>PJ</td>
+                    <td>PG</td>
+                    <td>PE</td>
+                    <td>PP</td>
+                    <td>DG</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 1</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 2</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 3</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 4</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+                <tr>
+                    <td>EQUIPO 5</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                    <td>0</td>
+                </tr>
+            </table>
+        </div>
 
-
-      
+   
 
     <footer class="footer-femenino">
         <a href="https://es-la.facebook.com/"><img class="redes"
