agregue transicion a h1 femenino y h1 masculino

--- a/femenino.html
+++ b/femenino.html
@@ -39,7 +39,7 @@
     <main class="main-femenino">
 
         <div class="intro-femenino">
-            <H1>Torneo Femenino</H1>
+            <H1 class="h1-torneo-femenino">Torneo Femenino</H1>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Facilis praesentium doloribus dolor harum deleniti error,
                 perferendis magni sequi. Nobis commodi delectus, dolores
