--- a/masculino.html
+++ b/masculino.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
+<body class="contenedor-masculino">
     <header class="header">  
 
         <div class="contenedor-logo">
@@ -35,7 +35,7 @@
         </div>
     </header> 
     <main>
-        <H1>Torneo Masculino</H1>
+        <H1 class="h1-torneo-masculino">Torneo Masculino</H1>
              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Facilis praesentium doloribus dolor harum deleniti error,
                 perferendis magni sequi. Nobis commodi delectus, dolores
