agregue titel a todas las paginas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins:wght@200&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>RIOFTBL</title>
 </head>
 
 <body class="contenedor">
