--- a/femenino.html
+++ b/femenino.html
@@ -16,54 +16,54 @@
   <title>Document</title>
 </head>
 
-<body class="container-fluid contenedor-femenino">
+<body class="container-fluid contenedor-body">
 
   <header class="row header">
 
 
     <section class="row contenedor-header">
-      <div class="col-lg-2 col-md-6 col-sm-12 logo">
+        <div class="col-lg-2 col-md-6 col-sm-12 logo">
 
-        <a href="index.html">
-          <h1>RIOFTBL</h1>
-        </a>
-      </div>
+            <a href="index.html">
+                <h1>RIOFTBL</h1>
+            </a>
+        </div>
 
 
-      <div class="col-lg-10 col-md-6 col-sm-12 navegacion">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
+        <div class="col-lg-10 col-md-6 col-sm-12 navegacion">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
 
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="femenino.html">FEMENINO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="masculino.html">MASCULINO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="informacion.html">INFORMACION</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contacto.html">CONTACTO</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="femenino.html">FEMENINO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="masculino.html">MASCULINO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="informacion.html">INFORMACION</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contacto.html">CONTACTO</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </section>
 
-  </header>
-
+</header>
   <main class="row main-femenino">
 
     <div class="row intro-femenino">
@@ -155,7 +155,7 @@
             </tr>
           </tbody>
         </table>
-    </div>
+      </div>
 
   </main>
 
