--- a/femenino.html
+++ b/femenino.html
@@ -89,7 +89,7 @@
     <div class="row contenedor-posiciones-femenino">
       <h2 class="col-sm-12 col-md-12 col-lg-12">Tabla de posiciones</h2>
       <div class="col-sm-12 col-md-12 col-lg-12 tabla-femenino">
-        <table class="table">
+        <table class="col-sm-12 col-md-12 col-lg-12 table">
           <thead class="thead-dark">
             <tr>
               <th scope="col">#</th>
