Todos los camios han sido actualizados

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="futbol, football, rio, brasil, equipo, amigos">
+    <meta name="description" content="Llego el mejor torneo de futbol para vos y tus amigos a San Isidro">
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins:wght@200&family=Rubik:wght@300&display=swap" rel="stylesheet">
     <title>RIOFTBL</title>
+
 </head>
 
 <body class="contenedor">
@@ -36,40 +39,44 @@
     <main class="main">
 
         <div class="portada">
-            <img class="imagen-portada img-fluid"
-                src="https://images.unsplash.com/photo-1529900748604-07564a03e7a6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+            <img class="imagen-portada img-fluid" src="multimedia/imagen-portada.jpg" alt="portada">
         </div>
 
         <div class="banner">
             <a href="informacion.html">
                 <h2 class="h2-informacion">INFORMACION</h2>
-                <img class="imagen-banner img-fluid" src="http://file.hstatic.net/1000061481/file/nike_daybreak___1__f19632801e57407aa1618cbda255f772.jpg">
+                <img class="imagen-banner img-fluid" src="multimedia/imagen-banner.jpg" alt="banner">
             </a>
         </div>
 
         <div class="femenino">
             <a href="femenino.html">
                 <h2 class="h2-femenino">FEMENINO</h2>
-                <img class="imagen-femenino img-fluid" src="https://images.pexels.com/photos/9519506/pexels-photo-9519506.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <img class="imagen-femenino img-fluid" src="multimedia/imagen-femenino.jpeg" alt="futbol_femenino">
             </a>
         </div>
         <div class="masculino">
             <a href="masculino.html">
                 <h2 class="h2-masculino">MASCULINO</h2>
-                <img class="imagen-masculino img-fluid" src="https://images.pexels.com/photos/274422/pexels-photo-274422.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500">
+                <img class="imagen-masculino img-fluid" src="multimedia/imagen-masculino.jpeg" alt="Futbol_masculino">
             </a>
         </div>
 
     </main>
 
     <footer class="footer">
-        <a href="https://es-la.facebook.com/">
-            <img class="redes" src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png">
-        <a>
-        <a href="https://www.instagram.com/?hl=es-la">
-            <img class="redes" src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg">
-        </a>
-                <P>Todos los derechos reservados.</P>
+        <section class="contenedor-footer">
+            <a href="https://es-la.facebook.com/">
+                <img class="redes" src="multimedia/facebook.png" target="_blank" alt="logo_facebook">
+            <a>
+            <a href="https://www.instagram.com/?hl=es-la">
+                <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
+            </a>
+            <button type="button" class="whatsapp">
+                    <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
+            </button>
+        </section>
+        <P>Todos los derechos reservados.</P>        
     </footer>
 
 
