--- a/femenino.html
+++ b/femenino.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="futbol, football, femenino, futbol femenino, rio, brasil, equipo, amigos, amigas">
+    <meta name="description" content="Llego el mejor torneo de futbol para vos y tus amigas a San Isidro">
     <link rel="stylesheet" href="estilos/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Poppins:wght@200&family=Rubik:wght@300&display=swap"
         rel="stylesheet">
-    <title>RIOFTBL</title>
+    <title>RIO - Femenino</title>
 </head>
 
 <body class="contenedor-femenino">
@@ -40,7 +42,7 @@
 
         <div class="intro-femenino">
             <H1 class="h1-torneo-femenino">Torneo Femenino</H1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            <p class="p-femenino">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Facilis praesentium doloribus dolor harum deleniti error,
                 perferendis magni sequi. Nobis commodi delectus, dolores
                 cum deserunt consectetur at autem quam blanditiis qui.
@@ -53,16 +55,16 @@
 
         <section class="contenedor-imagenes-femenino">
             <div>
-                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="femenino1">
             </div>
             <div>
-                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="femenino2">
             </div>
             <div>
-                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="femenino3">
             </div>
             <div>
-                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80">
+                <img class="portada-femenino img-fluid" src="https://images.unsplash.com/photo-1624880357913-a8539238245b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="femenino4">
             </div>
         </section>
 
@@ -129,13 +131,18 @@
    
 
         <footer class="footer">
-            <a href="https://es-la.facebook.com/">
-                <img class="redes" src="https://i.pinimg.com/originals/c0/94/4d/c0944d82ebff96a6a5235e7e933e559a.png">
-            <a>
-            <a href="https://www.instagram.com/?hl=es-la">
-                <img class="redes" src="https://i.pinimg.com/564x/1a/db/0e/1adb0e1f5d3800942accbca2422be08e.jpg">
-            </a>
-                    <P>Todos los derechos reservados.</P>
+            <section class="contenedor-footer">
+                <a href="https://es-la.facebook.com/">
+                    <img class="redes" src="multimedia/facebook.png" target="_blank" alt="logo-facebook">
+                <a>
+                <a href="https://www.instagram.com/?hl=es-la">
+                    <img class="redes" src="multimedia/logoig.png" target="_blank" alt="logo_instagram">
+                </a>
+                <button type="button" class="whatsapp-f">
+                        <a href="https://web.whatsapp.com/" target="_blank"> Escribinos </a>
+                </button>
+            </section>
+            <P>Todos los derechos reservados.</P>        
         </footer>
 </body>
 
